atualizando a pagina de solicitar entrada
- vagas restante
- integração de todas as funções

tambem atualizei a sugestão de amizades concluido a logica e a integração