@@ -9,9 +9,9 @@ import com.esporte.myapp.repository.FriendRequestRepository;
 import com.esporte.myapp.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,11 +19,14 @@ public class FriendSuggestionService {
     private final FriendRequestRepository friendRequestRepository;
     private final UserRepository userRepository;
 
+    @Transactional(readOnly = true)
     public List<FriendSuggestionResponse> getFriendSuggestions(Long userId) {
         User currentUser = userRepository.findById(userId)
           .orElseThrow(() -> new RuntimeException("User not found"));
 
-        // Monta amigos aceitos (sem UNION)
+        // Força inicialização antes de sair do escopo
+        Set<String> currentSports = new HashSet<>(optionalSports(currentUser));
+
         Set<User> myFriends = new HashSet<>();
         List<FriendRequest> asReceiver = friendRequestRepository.findByReceiverAndStatus(currentUser, RequestStatus.ACCEPTED);
         asReceiver.forEach(fr -> myFriends.add(fr.getSender()));
@@ -32,11 +35,11 @@ public class FriendSuggestionService {
 
         List<User> candidates = userRepository.findAll().stream()
                 .filter(u -> !u.getId().equals(userId) && !myFriends.contains(u))
-                .collect(Collectors.toList());
+                .toList();
 
         List<FriendSuggestionResponse> suggestions = new ArrayList<>();
 
-        // 1) >=3 amigos em comum
+        // 1) >= 3 amigos em comum
         for (User candidate : candidates) {
             Set<User> candidateFriends = buildFriendSet(candidate);
             Set<User> mutual = new HashSet<>(myFriends);
@@ -53,19 +56,18 @@ public class FriendSuggestionService {
             }
         }
 
-        // 2) Sem amigos em comum, >=2 esportes iguais
+        // 2) Sem amigos em comum + >=2 esportes iguais
         for (User candidate : candidates) {
-            boolean already = suggestions.stream().anyMatch(s -> s.id().equals(candidate.getId()));
-            if (already) continue;
+            if (suggestions.stream().anyMatch(s -> s.id().equals(candidate.getId()))) continue;
 
             Set<User> candidateFriends = buildFriendSet(candidate);
             Set<User> mutual = new HashSet<>(myFriends);
             mutual.retainAll(candidateFriends);
             if (mutual.isEmpty()) {
-                Set<String> sportsCurrent = new HashSet<>(currentUser.getSports());
-                Set<String> sportsCandidate = new HashSet<>(candidate.getSports());
-                sportsCurrent.retainAll(sportsCandidate);
-                if (sportsCurrent.size() >= 2) {
+                Set<String> candSports = new HashSet<>(optionalSports(candidate));
+                Set<String> inter = new HashSet<>(currentSports);
+                inter.retainAll(candSports);
+                if (inter.size() >= 2) {
                     suggestions.add(new FriendSuggestionResponse(
                             candidate.getId(), candidate.getName(), candidate.getPhoto(),
                             0, List.of()));
@@ -75,6 +77,14 @@ public class FriendSuggestionService {
 
         suggestions.sort((a, b) -> b.mutualCount() - a.mutualCount());
         return suggestions;
+    }
+
+    private Set<String> optionalSports(User u) {
+        try {
+            return u.getSports() == null ? Set.of() : u.getSports();
+        } catch (Exception e) {
+            return Set.of();
+        }
     }
 
     private Set<User> buildFriendSet(User user) {
